--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,5 @@
 {
     "env": {
-        "commonjs": true,
         "es2021": true,
         "node": true
     },
@@ -11,5 +10,6 @@
         "ecmaVersion": "latest"
     },
     "rules": {
+        "no-restricted-syntax": []
     }
 }
