--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "prettier": "^2.6.2"
+  },
+  "dependencies": {
+    "buffer-crc32": "^0.2.13"
   }
 }
