begin conversion to async

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
         "message": "`with` is disallowed in strict mode because it makes code impossible to predict and optimize."
       }
     ],
-    "max-classes-per-file": ["error", 3]
+    "max-classes-per-file": ["error", 3],
+    "no-await-in-loop": ["off"]
   }
 }
