--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
-    "buffer-crc32": "^0.2.13"
+    "buffer-crc32": "^0.2.13",
+    "winreg": "^1.2.4"
   }
 }
