--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "dota-terrain-replacer",
   "version": "1.0.0",
   "description": "App to patch the default map file in DotA 2 with the selected terrain file, allowing the use of all terrains regardless of ownership.",
-  "main": "main.js",
+  "main": "src/main.cjs",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +26,7 @@
   },
   "homepage": "https://github.com/ObsoleteXero/DotA-Terrain-Replacer#readme",
   "devDependencies": {
+    "electron": "^19.0.3",
     "eslint": "^8.15.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -33,6 +35,7 @@
   },
   "dependencies": {
     "buffer-crc32": "^0.2.13",
+    "vue": "^3.2.36",
     "winreg": "^1.2.4"
   }
 }
