remove non-core dependencies

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,51 +1,15 @@
 {
-  "env": {
-    "es2021": true,
-    "node": true,
-    "browser": true
-  },
-  "extends": ["airbnb-base", "prettier"],
+  "root": true,
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
+  "extends": ["eslint:recommended", "prettier"],
+  "env": {
+    "es2021": true,
+    "node": true
+  },
   "rules": {
-    "no-restricted-syntax": [
-      "error",
-      {
-        "selector": "ForInStatement",
-        "message": "for..in loops iterate over the entire prototype chain, which is virtually never what you want. Use Object.{keys,values,entries}, and iterate over the resulting array."
-      },
-      // {
-      //   "selector": "ForOfStatement",
-      //   "message": "iterators/generators require regenerator-runtime, which is too heavyweight for this guide to allow them. Separately, loops should be avoided in favor of array iterations."
-      // },
-      {
-        "selector": "LabeledStatement",
-        "message": "Labels are a form of GOTO; using them makes code confusing and hard to maintain and understand."
-      },
-      {
-        "selector": "WithStatement",
-        "message": "`with` is disallowed in strict mode because it makes code impossible to predict and optimize."
-      }
-    ],
-    "max-classes-per-file": ["error", 2],
-    "no-await-in-loop": ["off"],
-    "no-bitwise": ["off"],
-    "no-console": "off",
-    "import/no-extraneous-dependencies": [
-      "error",
-      {
-        "devDependencies": true,
-        "optionalDependencies": false,
-        "peerDependencies": false
-      }
-    ],
-    "import/extensions": [
-      "error",
-      {
-        "js": "always"
-      }
-    ]
+    "no-console": "off"
   }
 }
