--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,15 @@ dist
 
 # VSCode directory
 .vscode/
+
+# electron-vue
+.DS_Store
+dist/electron/*
+dist/web/*
+build/*
+!build/icons
+node_modules/
+npm-debug.log
+npm-debug.log.*
+thumbs.db
+!.gitkeep
